--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="scripts/index.js"></script>
     <h1 class="g-gray-950 w-screen h-screen flex justify-center">Welcome to my portfolio site</h1>
     <p>Click to Enter</p>
+    <a href="../pages/home.html">Test</a>
     
 </body>
 </html>
