Added javascript functions

--- a/pages/home.html
+++ b/pages/home.html
@@ -14,26 +14,35 @@
             <a href="../pages/contact.html">Contact</a> 
         </nav>
     </div>
-    <div id = introduction>
-        <h1>Hi! I'm Nicholas</h1>
-        <h1>Welcome to my website!
+    <div id = "introduction">
+        <h1>Hi! I'm Nicholas<br>Welcome to my website!
         </h1>
     </div>
-    <div id = AboutMe>
+    <div id = "AboutMe">
         <p>I am an aspiring game programmer who has just completed my <br>
         Bacherlor's Degree course in Game Development</p>
         <p>Currrently looking for Interships and working on personal projects</p>
     </div>
-    <div id = openAboutWebsite>
-        <button>Test</button>
+    <div id = "openAboutWebsite">
+        <button id = "note">Test</button>
     </div>
-    <div id = aboutWebsite class="webInfo">
-        <p>This website was made using</p>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-        </ul>
+    <div class = "aboutWebsite" id = "about">
+        <div class = "aboutWebsiteHeader">
+            <h1>About the website</h1>
+        </div>
+        <div id = "aboutWebsite" class="aboutWebsiteInfo">
+            <p>This website was made using</p>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+            <br>
+            <p>I plan to improve and personalize the site in the future<br>
+            through the use of frameworks and other resources</p>
+        </div>
     </div>
+    <div class= "overlay" id = "over"></div>
+    <script src="../scripts/home.js"></script>
 </body>
 </html>
