--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" type="image/png" href="assets/general/Icon.png">
     </head>
 <body>
-    <script src="scripts/index.js"></script>
-    <h1 class="g-gray-950 w-screen h-screen flex justify-center">Welcome to my portfolio site</h1>
+    <h1>Welcome to my portfolio site</h1>
     <p>Click to Enter</p>
     <a href="pages/home.html">Home</a> |
-    
+    <script src="scripts/index.js"></script>
 </body>
 </html>
