--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Welcome to my portfolio site</h1>
     <p>Click to Enter</p>
-    <a href="pages/home.html">Home</a> |
+    <a href="../pages/home.html">Home</a> |
     <script src="scripts/index.js"></script>
 </body>
 </html>
