Finished home and contacts

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,15 +3,35 @@
 <head>
     <title>Nicholas Choong | Contact</title>
     <link rel="icon" type="image/png" href="../assets/general/Icon.png">
+    <link rel="stylesheet" href="../styles/contact.css">
 </head>
 <body>
-   <nav>
-        <a href="../pages/home.html">Home</a> |
-        <a href="../pages/projects.html">Projects</a> 
-        <a href="../pages/resume.html">Resume</a> 
-        <a href="../pages/contact.html">Contact</a> 
-    </nav>
-    <h1>Connect with me!</h1>
-    <p>Feel free to reach out to me through the communication channels below</p>
+    <div class="navigation">
+        <nav>
+            <a href="../pages/home.html">Home</a> |
+            <a href="../pages/projects.html">Projects</a> 
+            <a href="../pages/resume.html">Resume</a> 
+            <a class= "active" href="../pages/contact.html">Contact</a> 
+        </nav>
+    </div>
+    <div class = "commsIntro1">
+        <h1>Connect with me!</h1>
+    </div>
+    <div class = "commsIntro2">
+        <p>Feel free to reach out to me through the communication channels below</p>
+    </div>
+    <div class="buttons">
+        <div class = "mail">
+            <p>My Email:</p>
+            <a href="mailto:nicjianhaochoong@gmail.com"><img src="../assets/contact/mail.jpg"></a> 
+        </div>
+        <div class = "linkedin">
+            <p>My Linkedin Profile:</p>
+            <a href="https://www.linkedin.com/in/nicholas-choong-jianhao-849651276/"><img src="../assets/contact/linkedin.png"></a> 
+        </div>
+    </div>
+    <footer id = "footer">
+        <p>©2025 | Nicholas Choong</p>
+    </footer>
 </body>
 </html>
