--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,15 +3,21 @@
 <head>
     <title>Nicholas Choong | Projects</title>
     <link rel="icon" type="image/png" href="/assets/general/Icon.png">
+    <link rel="stylesheet" href="../styles/projects.css">
 </head>
 <body>
-    <nav>
-        <a href="../pages/home.html">Home</a> |
-        <a href="../pages/projects.html">Projects</a> 
-        <a href="../pages/resume.html">Resume</a> 
-        <a href="../pages/contact.html">Contact</a> 
-    </nav>
+   <div class="navigation">
+        <nav>
+            <a href="../pages/home.html">Home</a> |
+            <a class= "active" href="../pages/projects.html">Projects</a> 
+            <a href="../pages/resume.html">Resume</a> 
+            <a href="../pages/contact.html">Contact</a> 
+        </nav>
+    </div>
     <h1>Connect with me!</h1>
     <p>Feel free to reach out to me through the communication channels below</p>
+    <footer id = "footer">
+        <p>©2025 | Nicholas Choong</p>
+    </footer>
 </body>
 </html>
