--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html> 
 <html>
 <head>
-    <title>Nicholas Choong | Projects</title>
+    <title>Nicholas Choong | Resume</title>
     <link rel="icon" type="image/png" href="/assets/general/Icon.png">
-    <link rel="stylesheet" href="../styles/projects.css">
+    <link rel="stylesheet" href="../styles/">
 </head>
 <body>
    <div class="navigation">
