fixed more links

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Nicholas Choong | Resume</title>
-    <link rel="icon" type="image/png" href="/assets/general/Icon.png">
+    <link rel="icon" type="image/png" href="../assets/general/Icon.png">
     <link rel="stylesheet" href="../styles/">
 </head>
 <body>
