--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Nicholas Choong | Projects</title>
-    <link rel="icon" type="image/png" href="/assets/general/Icon.png">
+    <link rel="icon" type="image/png" href="../assets/general/Icon.png">
     <link rel="stylesheet" href="../styles/projects.css">
 </head>
 <body>
