linked resume stylesheet

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -3,7 +3,7 @@
 <head>
     <title>Nicholas Choong | Resume</title>
     <link rel="icon" type="image/png" href="../assets/general/Icon.png">
-    <link rel="stylesheet" href="../styles/">
+    <link rel="stylesheet" href="../styles/resume.css">
 </head>
 <body>
    <div class="navigation">
