--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Nicholas Choong | Enter</title>
-    <link rel="icon" type="image/png" href="assets/general/Icon.png">
+    <link rel="icon" type="image/png" href="../assets/general/Icon.png">
     </head>
 <body>
     <h1>Welcome to my portfolio site</h1>
     <p>Click to Enter</p>
-    <a href="../pages/home.html">Home</a> |
+    <a href="./pages/home.html">Home</a> |
 </body>
 </html>
