Added resume and projects pages

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,10 +14,64 @@
             <a href="../pages/contact.html">Contact</a> 
         </nav>
     </div>
-    <h1>Connect with me!</h1>
-    <p>Feel free to reach out to me through the communication channels below</p>
+    <div class="intro1">
+        <h1>Check out my projects!</h1>
+    </div>
+    <div class="intro2">
+        <p>These are the major projects that I have worked on</p>
+    </div>
+    <div class="open" id = "oM">
+        <img src="../assets/projects/mythT.png" alt="Mythical Dateline">
+        <div class="content">
+            <h1>Mythical Dateline</h1>
+            <p>Work in a event's company filled with mythical creatures.</p>
+            <p>(Final Year Project 2)</p>
+        </div>
+    </div>
+     <div class="open" id = "oM">
+        <img src="../assets/projects/boardT.png" alt="Now Boarding">
+        <div class="content">
+            <h1>Now Boarding</h1>
+            <p>A hidden objects game where you play as the airline staff handling people's boarding pass.</p>
+            <p>(RedGames Jam 2025)</p>
+        </div>
+    </div>
+     <div class="open" id = "oM">
+        <img src="../assets/projects/reignT.png" alt="Rapture Reign">
+        <div class="content">
+            <h1>Rapture Reign</h1>
+            <p>An ASEAN mythological hack and slash made for mobile devices.</p>
+            <p>(Game Project Studio 2)</p>
+        </div>
+    </div>
+     <div class="open" id = "oM">
+        <img src="../assets/projects/sealT.png" alt="The 7th Seal">
+        <div class="content">
+            <h1>The 7th Seal</h1>
+            <p>A Lovecraftian rougelike with a solitaire twist.</p>
+            <p>(Game Project Studio 1)</p>
+        </div>
+    </div>
+    <div class = "mythicalDateline" id = "md">
+        <div class = "mythicalHead">
+            <h1>About the website</h1>
+        </div>
+        <div id = "mythicalAbout" class="mythicalAbout">
+            <p>This website was made using</p>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+            <br>
+            <p>I plan to improve and personalize the site in the future<br>
+            through the use of frameworks and other resources</p>
+        </div>
+    </div>
+    <div class= "overlay" id = "over"></div>
     <footer id = "footer">
         <p>©2025 | Nicholas Choong</p>
     </footer>
+    <script src="../scripts/projects.js"></script>
 </body>
 </html>
