--- a/pages/resume.html
+++ b/pages/resume.html
@@ -14,8 +14,17 @@
             <a href="../pages/contact.html">Contact</a> 
         </nav>
     </div>
-    <h1>Connect with me!</h1>
-    <p>Feel free to reach out to me through the communication channels below</p>
+    <div class = "intro">
+        <h1>Check out my resume!</h1>
+    </div>
+    <div class="resumePages">
+        <div class = "resumeInfo1">
+            <img class = "r1" src ="../assets/resume/cv1.jpg" alt="Resume Page 1" width = "550", height="780">
+        </div>
+        <div class = "resumeInfo1">
+            <img class = "r1" src ="../assets/resume/cv2.jpg" alt="Resume Page 1" width = "550", height="780">
+        </div>
+    </div>
     <footer id = "footer">
         <p>©2025 | Nicholas Choong</p>
     </footer>
