--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Welcome to my portfolio site</h1>
     <p>Click to Enter</p>
     <a href="./pages/home.html">Home</a> |
+    <script src="../scripts/index.js"></script>
 </body>
 </html>
