Added button to download resume

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -56,7 +56,8 @@
         <div class = "mythicalHead">
             <h1>About the website</h1>
         </div>
-        <div id = "mythicalAbout" class="mythicalAbout">
+        <div class="mythicalAbout" id = "mA">
+            <img src = "../assets/projects/mythT.png" width="500" height="250">
             <p>This website was made using</p>
             <ul>
                 <li>HTML</li>
