--- a/pages/resume.html
+++ b/pages/resume.html
@@ -14,16 +14,19 @@
             <a href="../pages/contact.html">Contact</a> 
         </nav>
     </div>
-    <div class = "intro">
+    <div class="intro">
         <h1>Check out my resume!</h1>
     </div>
     <div class="resumePages">
         <div class = "resumeInfo1">
             <img class = "r1" src ="../assets/resume/cv1.jpg" alt="Resume Page 1" width = "550", height="780">
         </div>
-        <div class = "resumeInfo1">
-            <img class = "r1" src ="../assets/resume/cv2.jpg" alt="Resume Page 1" width = "550", height="780">
+        <div class = "resumeInfo2">
+            <img class = "r2" src ="../assets/resume/cv2.png" alt="Resume Page 1" width = "550", height="780">
         </div>
+    </div>
+    <div class="downloadLink"> 
+        <a href="../assets/resume/NicholasChoongJianhao_CV.pdf" download>Download my resume</a>
     </div>
     <footer id = "footer">
         <p>©2025 | Nicholas Choong</p>
